--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
+theme: jekyll-theme-dinky
 title: HuskyDG official page
-description: 
+description: HuskyDG official page
