--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-dinky
-title: HuskyDG official page
-description: HuskyDG official page
+title: HuskyDG
+description: HuskyDG Official page
